omap:hdmi: port hdmi toggle switch from jbx
Change-Id: I970ae36621f9707336ad669c387d99624ec30329

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -693,4 +693,10 @@ source "drivers/misc/radio_ctrl/Kconfig"
 source "drivers/misc/ts27010mux/Kconfig"
 source "drivers/misc/gc-core/Kconfig"
 
+config HDMI_TOGGLE
+        bool "Support toggling hdmi by userspace"
+        default y
+        help
+          Say Y here to enable HDMI toggle Feature 
+
 endif # MISC_DEVICES
