--- a/arch/arm/configs/mapphone_mmi_defconfig
+++ b/arch/arm/configs/mapphone_mmi_defconfig
@@ -2131,6 +2131,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
+CONFIG_HDMI_TOGGLE=y
 CONFIG_HDMI_TI_4XXX_IP=y
 CONFIG_OMAP_HDMI_AUDIO_WA=y
 CONFIG_FB_OMAP_BOOTLOADER_INIT=y
