--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -168,6 +168,10 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS2
 	bool "smartass2"
 	select CPU_FREQ_GOV_SMARTASS2
 
+config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
+	bool "smartassH3"
+	select CPU_FREQ_GOV_SMARTASSH3
+
 endchoice
 
 config CPU_FREQ_GOV_NIGHTMARE
@@ -326,6 +330,9 @@ config CPU_FREQ_GOV_SMARTASS2
         tristate "'smartass2' cpufreq governor"
         depends on CPU_FREQ
 
+config CPU_FREQ_GOV_SMARTASSH3
+        tristate "'smartassH3' cpufreq governor"
+        depends on CPU_FREQ
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
