--- a/scripts/dtc/Makefile
+++ b/scripts/dtc/Makefile
@@ -6,7 +6,7 @@ always		:= $(hostprogs-y)
 dtc-objs	:= dtc.o flattree.o fstree.o data.o livetree.o treesource.o \
 		   srcpos.o checks.o util.o
 dtc-objs	+= dtc-lexer.lex.o dtc-parser.tab.o
-
+CFLAGS_dtc.o := -Wno-unused-but-set-variable
 # Source files need to get at the userspace version of libfdt_env.h to compile
 
 HOSTCFLAGS_DTC := -I$(src) -I$(src)/libfdt
