wakelock: add wakelock blacklist
  User space interface is /sys/power/wakelock_blacklist.
  blacklist item can be as:
        wakelock_name : process_name1 process_name2
   This means wakelock from process1 or process2
   If  supply prefix '-' for wakelock_name, the blacklist item will be remove.
   Wakelock and process split by a colon char.

Change-Id: I5707e0618df7a5bb5996c67e299c145b1c4ba3b6

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -50,6 +50,11 @@ config USER_WAKELOCK
 	  Write "lockname" to /sys/power/wake_unlock to unlock a user wake
 	  lock.
 
+config WAKELOCK_BLACKLIST
+	bool "wake lock blacklist"
+	depends on WAKELOCK && PROC_FS
+	default n
+
 config EARLYSUSPEND
 	bool "Early suspend"
 	depends on WAKELOCK
